added shake branch

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script type='text/javascript' src='http://www.midijs.net/lib/midi.js'></script>
+    <script src="shake.js"></script>
   </head>
   <body>
 
 
 
-    <script src="shake.js"></script>
+
   </body>
 </html>
