still figuring it out

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <script type='text/javascript' src='http://www.midijs.net/lib/midi.js'></script>
     <script src="shake.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
 
