--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,17 @@
     <meta charset="utf-8">
     <title></title>
     <script type='text/javascript' src='http://www.midijs.net/lib/midi.js'></script>
-    <script src="shake.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <!-- // <script src="public/util/shake.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+
   </head>
   <body>
 
+    <div id="users-connected"></div>
 
 
-
+    <script type="text/javascript" src='js/sockets/app.js'></script>
   </body>
+
 </html>
