--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
   </head>
   <body>
 
+<!-- this is a test -->
+
+    <h1>An example for <a href=" http://benalman.com/projects/jquery-throttle-debounce-plugin/">jQuery throttle / debounce</a>.</h1>
+
+    <p>Resize this window or move the mouse over it.</p>
+
+    <div id="resize">Window is being resized...</div>
+    <div id="mousemove">Mouse is being moved...</div>
+
 
 
 
