--- a/hackmonica/public/index.html
+++ b/hackmonica/public/index.html
@@ -7,9 +7,12 @@
     <script type='text/javascript' src='http://www.midijs.net/lib/midi.js'></script>
     <script src="shake.js"></script>
     <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-
+    <h2>
+      html working
+    </h2>
 <!-- this is a test -->
 
     <!-- <h1>An example for <a href=" http://benalman.com/projects/jquery-throttle-debounce-plugin/">jQuery throttle / debounce</a>.</h1>
@@ -20,7 +23,7 @@
     <div id="mousemove">Mouse is being moved...</div> -->
 
 <div id="box">
-  
+
 </div>
 
 
@@ -28,6 +31,6 @@
 </html>
 
 
-library / webserver / documents
+<!-- library / webserver / documents
 ip address / hackmonica (may need port)
-maybe need to do a command to start apache (sudo apachectl start)
+maybe need to do a command to start apache (sudo apachectl start) -->
