fixed some redundant files

--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script type='text/javascript' src='http://www.midijs.net/lib/midi.js'></script>
     <script src="shake.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-
+    <h2>
+      html working
+    </h2>
 <!-- this is a test -->
 
-    <h1>An example for <a href=" http://benalman.com/projects/jquery-throttle-debounce-plugin/">jQuery throttle / debounce</a>.</h1>
+    <!-- <h1>An example for <a href=" http://benalman.com/projects/jquery-throttle-debounce-plugin/">jQuery throttle / debounce</a>.</h1>
 
     <p>Resize this window or move the mouse over it.</p>
 
     <div id="resize">Window is being resized...</div>
-    <div id="mousemove">Mouse is being moved...</div>
+    <div id="mousemove">Mouse is being moved...</div> -->
 
+<div id="box">
 
+</div>
 
 
   </body>
 </html>
+
+
+<!-- library / webserver / documents
+ip address / hackmonica (may need port)
+maybe need to do a command to start apache (sudo apachectl start) -->
