--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <h2>
       html working
     </h2>
+
+    <div id="shaking">
+    </div>
 <!-- this is a test -->
 
     <!-- <h1>An example for <a href=" http://benalman.com/projects/jquery-throttle-debounce-plugin/">jQuery throttle / debounce</a>.</h1>
