--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <div id="resize">Window is being resized...</div>
     <div id="mousemove">Mouse is being moved...</div> -->
 
-<div id="box">
+<div id="box" style="background-color: rgb(139, 131, 187)";>
 
 </div>
 
