--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <title></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script type='text/javascript' src='http://www.midijs.net/lib/midi.js'></script>
-    <script src="shake.js"></script>
-    <script src="main.js"></script>
+    <script src="js/shake.js"></script>
+    <script src="js/main.js"></script>
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
@@ -25,7 +25,7 @@
     <div id="resize">Window is being resized...</div>
     <div id="mousemove">Mouse is being moved...</div> -->
 
-<div id="box" style="background-color: rgb(139, 131, 187)";>
+<div id="box">
 
 </div>
 
