--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
   </head>
   <body>
 
-    <h2>
+    <!-- <h2>
       html working
-    </h2>
+    </h2> -->
 
-    <div id="shaking">
+    <h2 id="shaking">
       is this even working?
-    </div>
+    </h2>
 <!-- this is a test -->
 
     <!-- <h1>An example for <a href=" http://benalman.com/projects/jquery-throttle-debounce-plugin/">jQuery throttle / debounce</a>.</h1>
