--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script type='text/javascript' src='http://www.midijs.net/lib/midi.js'></script>
     <script src="js/shake.js"></script>
-    <script src="js/main.js"></script>
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -32,6 +31,9 @@
   <body>
 
     <div id="users-connected"></div>
+    <div id="playerNumber"></div>
+    <button id="start">Start the Music</button>
+    <div id="instruments"></div>
 
     <h2 id="shaking">
       is this even working?
@@ -49,7 +51,7 @@
 
 </div>
 
-    <script type="text/javascript" src='js/sockets/app.js'></script>
+    <script src="js/main.js"></script>
   </body>
 
 </html>
